<resources>
    <string name="app_name">smkcoding</string>
    <string name="image">image</string>
    <string name="nama">Nama</string>
    <string name="grace_audry">Grace Audry</string>
    <string name=" 082226462280">082226462280</string>
    <string name="_082226462280">082226462280</string>
    <string name="no_hp">No_hp</string>
    <string name="home">Home</string>
    <string name="my_profil">my_profil</string>
</resources>
